test/ci/front-end/fail/tuple_typing2.rav
proc p() {
  var x: (Int, Int);
  x := (1, 2);
  x := (1, true);
}